--- a/css/styles.css
+++ b/css/styles.css
@@ -7,20 +7,26 @@
   --secondary-background-color: rgba(47, 48, 58, 1);
   --third-background-color: rgba(245, 244, 250, 1);
   --bt-hover: rgba(24, 140, 232, 1);
+  --header-border: 1px solid rgba(236, 236, 236, 1);
 }
 
 a {
   text-decoration: none;
 }
 
-ul {
+ul,
+h1,
+h2,
+h3 {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  width: 1600px;
+  max-width: 1600px;
   background-color: var(--main-color);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
 }
 
@@ -38,15 +44,38 @@ body {
   overflow: hidden;
 }
 
+/* Глобальный стиль */
+.contаiner {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 /* Верхняя линия */
+header a {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.contаiner.header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-bottom: var(--header-border);
+}
+
 /* блок Логотип */
 .logo {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
+
+  margin-right: 93px;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 
 .logo-web {
@@ -54,6 +83,15 @@ body {
 }
 
 /* блок Навигация */
+.nav-list {
+  display: flex;
+  flex-direction: row;
+}
+
+.nav-list .nav-item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .nav-item a {
   font-weight: 500;
   font-size: 14px;
@@ -72,6 +110,16 @@ body {
 }
 
 /* блок Контакты */
+.contact-list {
+  display: flex;
+  flex-direction: row;
+  margin-left: auto;
+}
+
+.contact-list .contact-item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .contact-item a {
   font-weight: 500;
   font-size: 14px;
@@ -208,7 +256,7 @@ body {
 }
 /* блок Логотип */
 .footer-logo {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
